# MegaLCS

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  Prompt-dev.md  Prompt-dev2.md  vcpkg.json
cpp/MegaLCSLib/: CMakeLists.txt
cpp/MegaLCSLib/OpenCL/: Mega.Cpu.cpp  Mega.Devices.cpp  Mega.Fusion.cpp  Mega.Host.cpp  Mega.Kernel.Shared.cpp  Mega.cpp  Mega.h
cpp/MegaLCSTest/: CMakeLists.txt
cpp/MegaLCSTest/OpenCL/: Perf_HostLCSShared.cpp  Test_CpuLCSMinMax.cpp  Test_HostLCSShared.cpp  Test_MegaLCSFusion_Coverage.cpp  Test_MegaLCSFusion_Value.cpp
csharp/: MegaLCS.sln
csharp/MegaLCSLib/: Class1.cs  MegaLCSLib.csproj
csharp/MegaLCSLib/OpenCL/: Mega.Cpu.cs  Mega.Devices.cs  Mega.Fusion.cs  Mega.Host.cs  Mega.Kernel.Nano.Register.cs  Mega.Kernel.Nano.Shared.cs  Mega.Kernel.Register.cs  Mega.Kernel.Shared.cs  Mega.Kernel.cs  Mega.cs
csharp/MegaLCSTest/: MegaLCSTest.csproj  Program.cs
csharp/MegaLCSTest/OpenCL/: Mega.Kernel.Nano.Register_Simulate.cs  Mega.Kernel.Shared_Test.cs  Perf_HostLCSShared.cs  Perf_Mega.Kernel.Shared.cs  Perf_Opencl.cs  Test_CpuLCSDataIndependent.cs  Test_CpuLCSFlex.cs  Test_CpuLCSMinMax.cs  Test_CpuLCSNoDependency.cs  Test_HostLCSShared.cs  Test_Mega.Kernel.Shared.cs  Test_MegaLCSFusion_Coverage.cs  Test_MegaLCSFusion_Value.cs  Tool_Mega.Kernel.Nano.Register.cs  Tool_QueryDevices.cs  Tool_Query_Devices.cs  Tool_RunOpenCLKernel.cs  Tool_Run_OpenCL_Kernel.cs  公式.xlsx  各个核函数的比较.xlsx  提示词-dev.md
js/webgpu/MegaLCSLib/: Mega.Cpu.js  Mega.Fusion-prompt.md  Mega.Fusion.js  Mega.Host.js  Mega.Kernel.Shared-prompt.md  Mega.Kernel.Shared.js  WGSL和OpenCL的一致性分析.md  WebGPUPrintf.js
js/webgpu/MegaLCSTest/: Common_Test.js  Mega.Cpu_Test.html  Mega.HostLCSShared_Test.html  Mega.Kernel.Shared_Demo.js  Mega.Kernel.Shared_DemoTest.html  MegaLCSFusion_TestValue.html  WebGPUPrintf_Expand_Test.html  WebGPUPrintf_Parse_Test.html
